# langchain-mcp-client

./: Makefile  README.md  RELEASE.md  llm_mcp_config.json5  pyproject.toml
.github/workflows/: build.yml  fix-license-header.yml
dev/content/: notebook.ipynb
docs/: Makefile  README.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
docs/src/components/: HomepageProducts.js
jupyter_mcp_client/: __init__.py  __version__.py
jupyter_mcp_client/tests/: __init__.py
langchain_mcp_client/: __init__.py  __version__.py  chat.py  cli_chat.py  config_loader.py  mcp_tools.py
